Resolves: tdf#123650 explicitly grab focus after modification

of the widget after gaining focus, otherwise gtk loses track
of where the focus should be

Change-Id: I90d9f36acf807aec8687c7f563449ef16d5eb574